<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SensorDetailsActivity"
        android:id="@+id/constraintLayoutDetails">


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_id"
            android:id="@+id/sensor_details_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_max_range"
            android:id="@+id/sensor_details_max_range"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_id"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_min_delay"
            android:id="@+id/sensor_details_min_delay"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_max_range"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_name"
            android:id="@+id/sensor_details_name"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_min_delay"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_power"
            android:id="@+id/sensor_details_power"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_name"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_reporting_mode"
            android:id="@+id/sensor_details_reporting_mode"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_power"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_resolution"
            android:id="@+id/sensor_details_resolution"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_reporting_mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_stringtype"
            android:id="@+id/sensor_details_stringtype"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_resolution"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_type"
            android:id="@+id/sensor_details_type"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_stringtype"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_vendor"
            android:id="@+id/sensor_details_vendor"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_type"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sensor_details_version"
            android:id="@+id/sensor_details_version"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/sensor_details_vendor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>